crates/cairo-lang-semantic/src/diagnostic_test_data/not_found
//! > Test PathNotFound.

//! > test_runner_name
test_expr_diagnostics(expect_diagnostics: true)

//! > expr_code
{
}

//! > module_code
fn foo() -> UnknownType {
    bar();
}

//! > function_body

//! > expected_diagnostics
error: Type not found.
 --> lib.cairo:1:13
fn foo() -> UnknownType {
            ^^^^^^^^^^^

error: Function not found.
 --> lib.cairo:2:5
    bar();
    ^^^

//! > ==========================================================================

//! > Test trying to access a function from a module whose file is missing.

//! > test_runner_name
test_expr_diagnostics(expect_diagnostics: true)

//! > expr_code
module_does_not_exist::bar()

//! > module_code
mod module_does_not_exist;

//! > function_body

//! > expected_diagnostics
error[E0005]: Module file not found. Expected path: module_does_not_exist.cairo
 --> lib.cairo:1:1
mod module_does_not_exist;
^^^^^^^^^^^^^^^^^^^^^^^^^^

//! > ==========================================================================

//! > Test missing implicit in implicit_precedence

//! > test_runner_name
test_expr_diagnostics(expect_diagnostics: true)

//! > expr_code
{}

//! > module_code
#[implicit_precedence(MissingBuiltin1, MissingBuiltin2)]
fn foo() {}

//! > function_body

//! > expected_diagnostics
error: Type not found.
 --> lib.cairo:1:23
#[implicit_precedence(MissingBuiltin1, MissingBuiltin2)]
                      ^^^^^^^^^^^^^^^

//! > ==========================================================================

//! > Test matching imports for missing methods.

//! > test_runner_name
test_expr_diagnostics(expect_diagnostics: true)

//! > expr_code
{
    let struct_a = A {a: 0};
    struct_a.foo()
}

//! > module_code
struct A {
    a: felt252,
}
mod module {
    use super::A;
    pub trait Trt1 {
        fn foo(self: A) -> felt252;
    }
    impl Imp1 of Trt1 {
        fn foo(self: A) -> felt252 {
            0
        }
    }
}

//! > function_body

//! > expected_diagnostics
error[E0002]: Method `foo` not found on type `test::A`. Consider importing one of the following traits: `module::Trt1`.
 --> lib.cairo:18:14
    struct_a.foo()
             ^^^

//! > ==========================================================================

//! > Test matching imports for missing methods from external crates.

//! > test_runner_name
test_expr_diagnostics(expect_diagnostics: true)

//! > expr_code
9_u32.sqrt()

//! > module_code

//! > function_body

//! > expected_diagnostics
error[E0002]: Method `sqrt` not found on type `core::integer::u32`. Consider importing one of the following traits: `core::num::traits::Sqrt`.
 --> lib.cairo:2:7
9_u32.sqrt()
      ^^^^
